#45-114 Adds "save" API method
