# openapi/spec.openapi.yml
@@ -2,9 +2,9 @@ openapi: 3.0.0
 
 servers:
   - description: OBADA Staging API
-    url: https://dev.api.obada.io
+    url: https://dev.node.obada.io
   - description: OBADA Production API
-    url: http://api.obada.io
+    url: http://obs.node.obada.io
 
 info:
   version: "0.0.1"
@@ -38,6 +38,7 @@ paths:
           $ref: "#components/responses/UnprocessableEntity"
         "500":
           $ref: "#/components/responses/InternalServerError"
+
   /obit/id:
     post:
       summary: Generate Obit ID
@@ -57,10 +58,30 @@ paths:
           $ref: "#components/responses/UnprocessableEntity"
         "500":
           $ref: "#/components/responses/InternalServerError"
+
   /obits:
+    post:
+      summary: Save Obit
+      description: 'Returns Obit with updated checksum if data was changed.'
+      operationId: save
+      tags:
+        - Obit
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Obit'
+      responses:
+        "200":
+          $ref: "#/components/schemas/Obit"
+        "422":
+          $ref: "#components/responses/UnprocessableEntity"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
     get:
       tags:
         - Obit
+      summary: Search obits by query
       description: Implements a fulltext search for obits by "searchTerm".
       operationId: search
       parameters:
@@ -86,21 +107,6 @@ paths:
                 $ref: "#/components/schemas/Obits"
         "500":
           $ref: "#/components/responses/InternalServerError"
-    post:
-      tags:
-        - Obit
-      description: Creates a new obit.
-      operationId: createObit
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Obit"
-      responses:
-        "201":
-          $ref: "#/components/responses/ObitCreated"
-        "422":
-          $ref: "#/components/responses/UnprocessableEntity"
 
   /obits/{obit_did}:
     parameters:
@@ -115,8 +121,9 @@ paths:
     get:
       tags:
         - Obit
-      description: Shows the information about single Obit by given ObitDID
-      operationId: showObit
+      summary: Get Obit by DID or USN
+      description: Get a single Obit by given ObitDID or USN
+      operationId: get
       responses:
         "200":
           description: Obit in response
@@ -129,39 +136,13 @@ paths:
         "500":
           $ref: "#/components/responses/InternalServerError"
 
-    put:
-      tags:
-        - Obit
-      description: Updates Obit by given ObitDID with payload
-      operationId: updateObit
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Obit"
-      responses:
-        "201":
-          $ref: "#/components/responses/Created"
-        "404":
-          $ref: "#/components/responses/NotFound"
-
-    delete:
-      tags:
-        - Obit
-      description: Changes Obit status to DISABLED_BY_OWNER
-      operationId: removeObit
-      responses:
-        "200":
-          $ref: "#/components/responses/NoContent"
-        "404":
-          $ref: "#/components/responses/NotFound"
-
   /obits/{obit_did}/history:
     get:
       tags:
         - Obit
-      description: Shows the history of changes by given Obit with ObitDID
-      operationId: showObitHistory
+      summary: Get Obit history by DID or USN
+      description: Shows the history of changes by given Obit with ObitDID or USN
+      operationId: history
       parameters:
         - name: obit_did
           in: path
@@ -186,6 +167,7 @@ components:
       $ref: "definitions/Obit.yml#/Obit"
     ObitHistory:
       $ref: "definitions/Obit.yml#/ObitHistory"
+
   responses:
     ObitIdResponse:
       description: Obit ID response
@@ -212,37 +194,21 @@ components:
                 type: array
                 items:
                   $ref: "#/components/schemas/ObitHistory"
-    ObitCreated:
-      description: Collection of historical changes for given obit
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              did:
-                type: string
-              usn:
-                type: string
-              hash:
-                type: string
-    Created:
-      description: The request was successful and the resource was created.
-    NoContent:
-      description: The request was successful and no content was returned.
+
     InternalServerError:
       description: Internal server error.
       content:
         application/json:
           schema:
             $ref: "Errors.yml#/InternalServerError"
-    BadRequest:
-      description: The request was malformed.
+
     NotFound:
       description: The requested resource could not be found.
       content:
         application/json:
           schema:
             $ref: "Errors.yml#/NotFound"
+
     UnprocessableEntity:
       description: The submitted entity could not be processed.
       content:
